--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiZDU3MjEwYzgtNmI3Yi00MmMwLTgyOGMtMWQ4NzlhNWU4NjJmIiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">German Version</a></p>
 													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiYzlmYTBmZjUtM2JhMi00ZjZkLWJkMGItNWIwNWE2MDFmYWI1IiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">English Version</a></p>
 	
-								<h2 class="major">project 4: Korrelationsmethoden</h2>
+								<h2 class="major">project 4: Correlation Methods</h2>
 											<span class="image main"><img src="images/MI.jpg" alt="" /></span>
 											<p>Database:  Movie Industry<p>
 											<p>Source: https://www.kaggle.com/datasets/danielgrijalvas/movies<p>
