--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 						<!-- profile -->
 							<article id="profile">
 								<h2 class="major">profile</h2>
-								<span class="image main"><img src="images/Profile 1MB_crop.jpg" alt="" /></span>
-								<p><a href="https://www.linkedin.com/in/khai-vu-a4ba4a289/">Please check out my Profile on Linkedin</a></p>
+								
+								<p><a href="https://www.linkedin.com/in/khai-vu-a4ba4a289/">Please check out my Profile on LinkedIn</a></p>
 								<p><p>
 							</article>
 
