--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Khai Vu</h1>
-								<p>Diese Website dient als Plattform zur Präsentation meiner Portfolioprojekte im Bereich Datenanalyse.</p>
+								<p>DIESE WEBSITE DIENT ALS PLATTFORM ZUR PRÄSENTATION MEINER PORTFOLIOPROJEKTE IM BEREICH DATENANALYSE.</p>
 							</div>
 						</div>
 						<nav>
@@ -47,15 +47,7 @@
 								<h2 class="major">about</h2>
 								<span class="image main"><img src="images/Profile 1MB_crop.jpg" alt="" /></span>
 								<p>
-									Hallo, mein Name ist Khai Vu und ich komme aus Vietnam. 
-									Als engagierter Bauingenieur mit umfangreicher Expertise und 
-									fast fünf Jahren Berufserfahrung im Bauwesen bin ich begeistert von der Möglichkeit,
-									 meine analytischen Fähigkeiten in der Welt der Daten anzuwenden. 
-									 Meine solide technische Grundlage, gepaart mit meinem Streben nach Effizienz und 
-									 datengetriebenen Lösungen, qualifiziert mich für einen reibungslosen Übergang 
-									 zu den Anforderungen dieser aufregenden Rolle. Ich bin entschlossen, 
-									 die gleiche Leidenschaft und Hingabe, die ich in meiner bisherigen Karriere gezeigt habe, 
-									 in die Welt der Unternehmensdaten einzubringen, um echten Mehrwert für Ihr Team zu schaffen.
+									Hallo, mein Name ist Khai Vu und ich komme aus Vietnam. Als engagierter Bauingenieur mit umfangreicher Expertise und fast fünf Jahren Berufserfahrung im Bauwesen bin ich begeistert von der Möglichkeit, meine analytischen Fähigkeiten in der Welt der Daten anzuwenden. Meine solide technische Grundlage, gepaart mit meinem Streben nach Effizienz und datengetriebenen Lösungen, qualifiziert mich für einen reibungslosen Übergang zu den Anforderungen dieser aufregenden Rolle. Ich bin entschlossen, die gleiche Leidenschaft und Hingabe, die ich in meiner bisherigen Karriere gezeigt habe, in die Welt der Unternehmensdaten einzubringen, um echten Mehrwert für Ihr Team zu schaffen.
 								</p>
 							</article>
 
@@ -125,8 +117,8 @@
 												um fundierte und datengetriebene Lösungen gemäß bewährten Praktiken 
 												innerhalb der Power BI-Plattform bereitzustellen.<p>
 													<p><a href="https://github.com/khaivuofficial/PortfolioProjects-BuildingDashboard.git">Link Github</a>
-													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiZDU3MjEwYzgtNmI3Yi00MmMwLTgyOGMtMWQ4NzlhNWU4NjJmIiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">German Version</a></p>
-													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiYzlmYTBmZjUtM2JhMi00ZjZkLWJkMGItNWIwNWE2MDFmYWI1IiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">English Version</a></p>
+													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiZDU3MjEwYzgtNmI3Yi00MmMwLTgyOGMtMWQ4NzlhNWU4NjJmIiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard German Version</a></p>
+													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiYzlmYTBmZjUtM2JhMi00ZjZkLWJkMGItNWIwNWE2MDFmYWI1IiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard English Version</a></p>
 	
 								<h2 class="major">project 4: Correlation Methods</h2>
 											<span class="image main"><img src="images/MI.jpg" alt="" /></span>
