--- a/index.html
+++ b/index.html
@@ -54,22 +54,23 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">project 1: data cleaning</h2>
-								<span class="image main"><img src="images/Nashville.jpg" alt="" /></span>
-								<p>Database: Nashville Housing Data <p>
-								</p>Source: https://www.kaggle.com/datasets/tmthyjames/nashville-housing-data<p>
-								<p>Software: Azure Data Studio</p>
+									<span class="image main"><img src="images/Nashville.jpg" alt="" /></span>
+									<p>Database: Nashville Housing Data <p>
+									</p>Source: https://www.kaggle.com/datasets/tmthyjames/nashville-housing-data<p>
+									<p>Software: Azure Data Studio</p>
 									<p>In diesem Projekt habe ich verschiedene SQL-Abfrage-Syntaxelemente verwendet, 
 										wie 'ALTER TABLE', 'UPDATE', 'DROP', 'DELETE', 'ISNULL', 'SUBSTRING', 'CHARINDEX' und 
 										andere relevante Befehle, um die Daten zu bereinigen und sicherzustellen, 
 										dass alle Werte in ihre entsprechenden Datentypen konvertiert werden.<p>
 									<p><a href="https://github.com/khaivuofficial/PortfolioProjects-DataCleaning.git">Link Github</a>
 									</p>
+
 								<h2 class="major">project 2: data aggregation</h2>
 									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
 									<p>Database: AdventureWorksDW2019 <p>
 									</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
-										<p>Software: Azure Data Studio</p>
-										<p>In meiner vorherigen Arbeit mit der AdventureWorksDW2019-Datenbank habe ich SQL routiniert eingesetzt, 
+									<p>Software: Azure Data Studio</p>
+									<p>In meiner vorherigen Arbeit mit der AdventureWorksDW2019-Datenbank habe ich SQL routiniert eingesetzt, 
 											um wertvolle Erkenntnisse aus den Daten zu aggregieren. 
 											Hier sind einige wichtige Techniken, die ich genutzt habe: <p>
 
@@ -101,10 +102,11 @@
 												Ich freue mich darauf, 
 												diese Fähigkeiten einzusetzen, um datengetriebene Exzellenz in Ihrer Organisation voranzutreiben.<p>
 												<p><a href="https://github.com/khaivuofficial/PortfolioProjects-DataAggregation.git">Link Github</a>
+
 								<h2 class="major">project 3: building dashboard</h2>
-										<span class="image main"><img src="images/AW.jpg" alt="" /></span>
-										<p>Database: AdventureWorksDW2019 <p>	
-										</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
+									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
+									<p>Database: AdventureWorksDW2019 <p>	
+									</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
 											<p>Software: PowerBI</p>
 											<p>Am Anfang dieses Projekts habe ich die Datenbereinigung und eine sorgfältige Kontrolle 
 												über die Tabellenbeziehungen priorisiert. Diese grundlegenden Schritte waren entscheidend, 
@@ -121,20 +123,33 @@
 													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiYzlmYTBmZjUtM2JhMi00ZjZkLWJkMGItNWIwNWE2MDFmYWI1IiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard English Version</a></p>
 	
 								<h2 class="major">project 4: Correlation Methods</h2>
-											<span class="image main"><img src="images/MI.jpg" alt="" /></span>
-											<p>Database:  Movie Industry<p>
-											<p>Source: https://www.kaggle.com/datasets/danielgrijalvas/movies<p>
-											<p>Software: Google Colab for Python Coding</p>
-											<p>In diesem Projekt habe ich mit Sorgfalt Datenbereinigungstechniken angewandt, 
+									<span class="image main"><img src="images/MI.jpg" alt="" /></span>
+									<p>Database:  Movie Industry<p>
+									<p>Source: https://www.kaggle.com/datasets/danielgrijalvas/movies<p>
+									<p>Software: Google Colab for Python Coding</p>
+									<p>In diesem Projekt habe ich mit Sorgfalt Datenbereinigungstechniken angewandt, 
 												um die Datenintegrität sicherzustellen und die Eignung der Werte für die Analyse zu gewährleisten. 
 												Anschließend habe ich Korrelationsmethoden angewendet, um die einflussreichsten Faktoren, 
 												die den Bruttoumsatz beeinflussen, zu erkennen. Durch diese Analyse konnte ich wertvolle Einblicke 
 												und Empfehlungen für Unternehmen in der Filmindustrie bereitstellen. 
 												Dieser Prozess ermöglichte datengesteuerte Entscheidungsfindung, 
 												was zu informierteren Strategien und verbesserten Geschäftsergebnissen beitrug.<p>
-													<p><a href="https://github.com/khaivuofficial/PortfolioProjects-CorrelationMethods.git">Link Github</a></p>	
+									<p><a href="https://github.com/khaivuofficial/PortfolioProjects-CorrelationMethods.git">Link Github</a></p>	
 							</article>
 							
+								<h2 class="major">project 5: Showcase Excel</h2>
+									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
+									<p>Database: AdventureWorksDW2019 <p>	
+									</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
+									<p>In diesem Projekt habe ich einige der wichtigsten Excel-Funktionen 
+										wie VLOOKUP, SUMIF, SUMIFS, Power Pivot und Power Query verwendet, 
+										um wichtige geschäftsbezogene Fragen zu beantworten. Das Projekt 
+										umfasst zwei Dashboards, eins für Tagesumsätze und eins für Monatsumsätze, 
+										die äußerst wertvoll sein können, um Probleme zu identifizieren und Lösungen im 
+										Unternehmen vorzuschlagen. Bitte nehmen Sie sich einen Moment Zeit, 
+										um die Excel-Datei zu überprüfen und die begleitenden Informationen zu lesen, 
+										um ein besseres Verständnis für das Projekt zu erhalten.</p>
+									<p><a href="https://github.com/khaivuofficial/PortfolioProjects-ShowcaseExcel-Ger">Link Github</a></p>
 
 						<!-- profile -->
 							<article id="profile">
