--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 								<h2 class="major">project 3: building dashboard</h2>
 									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
 									<p>Database: AdventureWorksDW2019 <p>	
-									</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
-											<p>Software: PowerBI</p>
-											<p>Am Anfang dieses Projekts habe ich die Datenbereinigung und eine sorgfältige Kontrolle 
+									<p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
+									<p>Software: PowerBI</p>
+									<p>Am Anfang dieses Projekts habe ich die Datenbereinigung und eine sorgfältige Kontrolle 
 												über die Tabellenbeziehungen priorisiert. Diese grundlegenden Schritte waren entscheidend, 
 												um die Datenintegrität und Zuverlässigkeit sicherzustellen. 
 												Anschließend habe ich drei unterschiedliche Dashboards erstellt, die sich auf Verkaufsberichte, 
@@ -118,9 +118,9 @@
 												Lesezeichen und anderer anspruchsvoller Funktionen. Diese Anstrengungen wurden unternommen, 
 												um fundierte und datengetriebene Lösungen gemäß bewährten Praktiken 
 												innerhalb der Power BI-Plattform bereitzustellen.<p>
-													<p><a href="https://github.com/khaivuofficial/PortfolioProjects-BuildingDashboard.git">Link Github</a>
-													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiZDU3MjEwYzgtNmI3Yi00MmMwLTgyOGMtMWQ4NzlhNWU4NjJmIiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard German Version</a></p>
-													</p><a href="https://app.powerbi.com/view?r=eyJrIjoiYzlmYTBmZjUtM2JhMi00ZjZkLWJkMGItNWIwNWE2MDFmYWI1IiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard English Version</a></p>
+									<p><a href="https://github.com/khaivuofficial/PortfolioProjects-BuildingDashboard.git">Link Github</a>
+									</p><a href="https://app.powerbi.com/view?r=eyJrIjoiZDU3MjEwYzgtNmI3Yi00MmMwLTgyOGMtMWQ4NzlhNWU4NjJmIiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard German Version</a></p>
+									</p><a href="https://app.powerbi.com/view?r=eyJrIjoiYzlmYTBmZjUtM2JhMi00ZjZkLWJkMGItNWIwNWE2MDFmYWI1IiwidCI6IjFlZWQ0OTljLTdmMzEtNDM0My05ZTRlLTQwYWZkNTU1N2U1ZSJ9">Dashboard English Version</a></p>
 	
 								<h2 class="major">project 4: Correlation Methods</h2>
 									<span class="image main"><img src="images/MI.jpg" alt="" /></span>
