--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Khai Vu</h1>
-								<p>DIESE WEBSITE DIENT ALS PLATTFORM ZUR PRÄSENTATION MEINER PORTFOLIOPROJEKTE IM BEREICH DATENANALYSE.</p>
+								<p>DIESE WEBSITE DIENT ALS PLATTFORM ZUR PRÄSENTATION MEINER PORTFOLIOPROJEKTE IN DER WELT DER DATEN.</p>
 							</div>
 						</div>
 						<nav>
