--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h2 class="major">about</h2>
 								<span class="image main"><img src="images/Profile 1MB_crop.jpg" alt="" /></span>
 								<p>
-									Hallo, mein Name ist Khai Vu. Als engagierter Bauingenieur mit umfangreicher Expertise und fast fünf Jahren Berufserfahrung im Bauwesen bin ich begeistert von der Möglichkeit, meine analytischen Fähigkeiten in der Welt der Daten anzuwenden. Meine solide technische Grundlage, gepaart mit meinem Streben nach Effizienz und datengetriebenen Lösungen, qualifiziert mich für einen reibungslosen Übergang zu den Anforderungen dieser aufregenden Rolle. Ich bin entschlossen, die gleiche Leidenschaft und Hingabe, die ich in meiner bisherigen Karriere gezeigt habe, in die Welt der Unternehmensdaten einzubringen, um echten Mehrwert für Ihr Team zu schaffen.
+									Hallo, mein Name ist Khai Vu. Als engagierter Bauingenieur mit umfangreicher Expertise und fast vier Jahren Berufserfahrung im Bauwesen bin ich begeistert von der Möglichkeit, meine analytischen Fähigkeiten in der Welt der Daten anzuwenden. Meine solide technische Grundlage, gepaart mit meinem Streben nach Effizienz und datengetriebenen Lösungen, qualifiziert mich für einen reibungslosen Übergang zu den Anforderungen dieser aufregenden Rolle. Ich bin entschlossen, die gleiche Leidenschaft und Hingabe, die ich in meiner bisherigen Karriere gezeigt habe, in die Welt der Unternehmensdaten einzubringen, um echten Mehrwert für Ihr Team zu schaffen.
 								</p>
 							</article>
 
