--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 										um die Excel-Datei zu überprüfen und die begleitenden Informationen zu lesen, 
 										um ein besseres Verständnis für das Projekt zu erhalten.</p>
 									<p>Außerdem habe ich auch einige Beispiele für die Anwendung von Statistik in der prädiktiven und inferenziellen Analyse vorbereitet.</p>
-									<p>Vielen Dank für Ihre Zeit</p>
 										<p><a href="https://github.com/khaivuofficial/PortfolioProjects-ShowcaseExcel">Link Github</a></p>
+										<p>Vielen Dank für Ihre Zeit!</p>
 							</article>
 						<!-- profile -->
 							<article id="profile">
