--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							
 								<h2 class="major">project 5: Showcase Excel</h2>
 									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
-									<p>Database: AdventureWorksDW2019 <p>	
+									<p>Database: AdventureWorks2019 <p>	
 									</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
 									<p>Software: Excel</p>
 									<p>In diesem Projekt habe ich einige der wichtigsten Excel-Funktionen 
