--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<p><a href="https://github.com/khaivuofficial/PortfolioProjects-DataCleaning.git">Link Github</a>
 									</p>
 
-								<h2 class="major">project 2: data aggregation</h2>
+								<h2 class="major">project 2: data analysis</h2>
 									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
 									<p>Database: AdventureWorksDW2019 <p>
 									</p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
@@ -103,7 +103,7 @@
 												diese Fähigkeiten einzusetzen, um datengetriebene Exzellenz in Ihrer Organisation voranzutreiben.<p>
 												<p><a href="https://github.com/khaivuofficial/PortfolioProjects-DataAggregation.git">Link Github</a>
 
-								<h2 class="major">project 3: building dashboard</h2>
+								<h2 class="major">project 3: data visualization</h2>
 									<span class="image main"><img src="images/AW.jpg" alt="" /></span>
 									<p>Database: AdventureWorksDW2019 <p>	
 									<p>Source: https://learn.microsoft.com/en-us/sql/samples/adventureworks-install-configure?view=sql-server-ver16&tabs=ssms<p>
